--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AICC Package</title>
+  <title>AICC Launch</title>
+  <meta http-equiv="refresh" content="0; url=default.htm" />
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; line-height: 1.4; }
-    .wrap { max-width: 960px; margin: 0 auto; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; }
     code { background:#f6f8fa; padding:2px 6px; border-radius:6px; }
   </style>
+  <script>
+    (function () {
+      var target = "default.htm";
+      var qs = window.location.search || "";
+      // Avoid loops
+      if (!window.location.pathname.endsWith("/" + target) && !window.location.pathname.endsWith(target)) {
+        window.location.replace(target + qs);
+      }
+    })();
+  </script>
 </head>
 <body>
-  <div class="wrap">
-    <h1>AICC Package Landing Page</h1>
-    <p>No HTML/Video launch file was found, so this is a simple listing. Add your launch page and update your AICC <code>.au</code> File_Name accordingly.</p>
-    <ul><li><code>Api.js</code></li>
-<li><code>assessment.au</code></li>
-<li><code>assessment.crs</code></li>
-<li><code>assessment.cst</code></li>
-<li><code>assessment.des</code></li>
-<li><code>default.htm</code></li></ul>
-  </div>
+  <p>Launching… If you are not redirected, <a id="link" href="default.htm">click here</a>.</p>
+  <p style="color:#666">Target from <code>assessment.au</code>: <code>default.htm</code></p>
+  <script>
+    document.getElementById("link").href = "default.htm" + (window.location.search || "");
+  </script>
 </body>
 </html>
