--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AICC Launch</title>
-  <meta http-equiv="refresh" content="0; url=default.htm" />
-  <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; }
-    code { background:#f6f8fa; padding:2px 6px; border-radius:6px; }
-  </style>
   <script>
     (function () {
       var target = "default.htm";
       var qs = window.location.search || "";
-      // Avoid loops
       if (!window.location.pathname.endsWith("/" + target) && !window.location.pathname.endsWith(target)) {
         window.location.replace(target + qs);
       }
@@ -21,10 +15,9 @@
   </script>
 </head>
 <body>
-  <p>Launching… If you are not redirected, <a id="link" href="default.htm">click here</a>.</p>
-  <p style="color:#666">Target from <code>assessment.au</code>: <code>default.htm</code></p>
+  <p>Launching… If you are not redirected, <a id="lnk" href="default.htm">click here</a>.</p>
   <script>
-    document.getElementById("link").href = "default.htm" + (window.location.search || "");
+    document.getElementById("lnk").href = "default.htm" + (window.location.search || "");
   </script>
 </body>
 </html>
